--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,10 +12,12 @@ jobs:
 
     steps:
     - name: Checkout repository
+      with:
+        submodules: true
       uses: actions/checkout@v4
 
     - name: Install dependencies
-      run: apt update && apt install -y make ccache clang flex bison llvm lld libssl-dev bc lz4 fakeroot cpio patch
+      run: sudo apt update && sudo apt install -y make ccache clang flex bison llvm lld libssl-dev bc lz4 fakeroot cpio patch
 
     - name: Build kernel
       run: ./build_kernel.sh
