--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,6 +14,7 @@ jobs:
     - name: Checkout repository
       with:
         submodules: true
+        fetch-depth: 0
       uses: actions/checkout@v4
 
     - name: Install dependencies
